--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-459.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-459.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO_FT_189" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.1000000000000045"/>
+	<property name="ireport.zoom" value="1.7715610000000088"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="482"/>
 	<parameter name="zona" class="java.lang.String"/>
 	<parameter name="ResolucionNumero" class="java.lang.String"/>
 	<parameter name="nombreAccionante" class="java.lang.String"/>
@@ -22,201 +22,201 @@
 				<reportElement x="-20" y="-20" width="594" height="102" forecolor="#009232" backcolor="#009232"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="-20" y="-20" width="594" height="41" forecolor="#FFFFFF"/>
+				<reportElement x="1" y="-4" width="554" height="20" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="14" isBold="true"/>
+					<font size="15" isBold="true"/>
 				</textElement>
 				<text><![CDATA[ELECCIÓN DE DELEGADOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="-20" y="19" width="594" height="41" isRemoveLineWhenBlank="true" forecolor="#FFFFFF"/>
+				<reportElement x="1" y="19" width="554" height="41" isRemoveLineWhenBlank="true" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="14" isBold="true"/>
+					<font size="13" isBold="true"/>
 				</textElement>
 				<text><![CDATA[RESOLUCIÓN QUE DENIEGA UN RECURSO DE REPOSICIÓN Y NO CONCEDE APELACIÓN POR NO SER SOLICITADO]]></text>
 			</staticText>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="39">
+		<band height="43">
 			<image>
-				<reportElement x="213" y="0" width="119" height="39"/>
+				<reportElement x="213" y="1" width="119" height="39"/>
 				<imageExpression class="java.lang.String"><![CDATA[$P{rutaImagen}+"/icono_coomeva.png"]]></imageExpression>
 			</image>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="665">
-			<frame>
-				<reportElement x="0" y="0" width="555" height="665" forecolor="#00B050"/>
-				<rectangle>
-					<reportElement x="25" y="20" width="530" height="31" forecolor="#000000"/>
-				</rectangle>
-				<rectangle>
-					<reportElement x="25" y="51" width="530" height="34" forecolor="#000000"/>
-				</rectangle>
-				<staticText>
-					<reportElement x="25" y="20" width="166" height="31" forecolor="#000000"/>
-					<textElement markup="none">
-						<font size="10" isBold="false"/>
-					</textElement>
-					<text><![CDATA[Zona Electrotal No.]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="193" y="20" width="88" height="14"/>
-					<textElement textAlignment="Center">
-						<font isBold="false"/>
-					</textElement>
-					<text><![CDATA[Resolución N°]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="25" y="51" width="256" height="14"/>
-					<textElement/>
-					<text><![CDATA[Accionante: Nombre(s) y Apellido(s)]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="282" y="52" width="121" height="33"/>
-					<textElement/>
-					<text><![CDATA[Resolucion Impugnada
-No.]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="438" y="52" width="50" height="20"/>
-					<textElement/>
-					<text><![CDATA[Fecha]]></text>
-				</staticText>
-				<line>
-					<reportElement x="191" y="20" width="1" height="31" forecolor="#000000"/>
-				</line>
-				<line>
-					<reportElement x="437" y="51" width="1" height="34" forecolor="#000000"/>
-				</line>
-				<line>
-					<reportElement x="281" y="51" width="1" height="34" forecolor="#000000"/>
-				</line>
-				<rectangle>
-					<reportElement x="25" y="110" width="530" height="493" forecolor="#000000"/>
-				</rectangle>
-				<staticText>
-					<reportElement x="34" y="90" width="247" height="20"/>
-					<textElement textAlignment="Left" verticalAlignment="Middle">
-						<font size="11" isBold="true"/>
-					</textElement>
-					<text><![CDATA[Análisis de los hechos presentados]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="34" y="118" width="521" height="41"/>
-					<textElement textAlignment="Left" lineSpacing="1_1_2">
-						<font size="11" isBold="false"/>
-					</textElement>
-					<text><![CDATA[Una vez revisados los hechos y argumentos planteados, la Comisión  Electoral determinó no procedente el argumento de:]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="35" y="489" width="246" height="18" forecolor="#000000"/>
-					<textElement textAlignment="Center">
-						<font size="12"/>
-					</textElement>
-					<text><![CDATA[Nombre Y Firma del Presidente ]]></text>
-				</staticText>
-				<line>
-					<reportElement x="36" y="488" width="367" height="1" forecolor="#000000"/>
-				</line>
-				<staticText>
-					<reportElement x="36" y="559" width="246" height="18" forecolor="#000000"/>
-					<textElement textAlignment="Center">
-						<font size="12"/>
-					</textElement>
-					<text><![CDATA[Nombre Y Forma del Secretario]]></text>
-				</staticText>
-				<line>
-					<reportElement x="36" y="556" width="367" height="1" forecolor="#000000"/>
-				</line>
-				<textField>
-					<reportElement x="34" y="162" width="514" height="97"/>
-					<textElement lineSpacing="Single">
-						<font size="11"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{argumento}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="25" y="64" width="256" height="20"/>
-					<textElement textAlignment="Center" verticalAlignment="Top">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreAccionante}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="332" y="63" width="105" height="20"/>
-					<textElement textAlignment="Center">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionImpugnada}]]></textFieldExpression>
-				</textField>
-				<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
-					<reportElement x="438" y="64" width="117" height="19"/>
-					<textElement textAlignment="Center">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.util.Date"><![CDATA[$P{fecha}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="25" y="34" width="166" height="17"/>
-					<textElement textAlignment="Center">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{zona}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="191" y="33" width="297" height="17"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{ResolucionNumero}]]></textFieldExpression>
-				</textField>
-				<staticText>
-					<reportElement x="0" y="54" width="25" height="332"/>
-					<textElement rotation="Left">
-						<font size="8"/>
-					</textElement>
-					<text><![CDATA[Vigilado por la Superintendencia de la Economia Solidaria  NIT.:890.300.625-1]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="34" y="344" width="514" height="60"/>
-					<textElement lineSpacing="1_1_2">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[La presente Resolución será comunicada al interesado, a la dirección que tenga registrada en la Cooperativa, en su condición de asociado, de acuerdo con lo previsto en el Artículo 110 del Código Electoral.]]></text>
-				</staticText>
-				<textField>
-					<reportElement x="34" y="262" width="514" height="82"/>
-					<textElement lineSpacing="1_1_2">
-						<font size="11"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto, se niega el recurso de reposición interpuesto contra la Resolución No."+$P{resolucion}+" , por las razones antes expuestas, y no procede conceder el recurso de apelación al no haber sido previamente interpuesto como subsidiario."]]></textFieldExpression>
-				</textField>
-			</frame>
+		<band height="520">
+			<rectangle>
+				<reportElement x="16" y="0" width="530" height="31" forecolor="#000000"/>
+			</rectangle>
+			<rectangle>
+				<reportElement x="16" y="31" width="530" height="34" forecolor="#000000"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="18" y="0" width="166" height="16" forecolor="#009232"/>
+				<textElement markup="none">
+					<font size="10" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Zona Electrotal No.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="184" y="0" width="126" height="16" forecolor="#009232"/>
+				<textElement>
+					<font size="10" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Resolución N°]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="16" y="31" width="256" height="16" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Accionante: Nombre(s) y Apellido(s)]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="273" y="32" width="155" height="16" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Resolucion Impugnada No.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="429" y="32" width="50" height="16" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Fecha]]></text>
+			</staticText>
+			<line>
+				<reportElement x="182" y="0" width="1" height="31" forecolor="#000000"/>
+			</line>
+			<line>
+				<reportElement x="428" y="31" width="1" height="34" forecolor="#000000"/>
+			</line>
+			<line>
+				<reportElement x="272" y="31" width="1" height="34" forecolor="#000000"/>
+			</line>
+			<rectangle>
+				<reportElement x="16" y="90" width="530" height="413" forecolor="#000000"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="25" y="70" width="247" height="20"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Análisis de los hechos presentados]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="104" y="406" width="365" height="18" forecolor="#000000"/>
+				<textElement textAlignment="Center">
+					<font size="8"/>
+				</textElement>
+				<text><![CDATA[Nombre Y Firma del Presidente ]]></text>
+			</staticText>
+			<line>
+				<reportElement x="102" y="405" width="367" height="1" forecolor="#000000"/>
+			</line>
+			<staticText>
+				<reportElement x="102" y="471" width="367" height="18" forecolor="#000000"/>
+				<textElement textAlignment="Center">
+					<font size="8"/>
+				</textElement>
+				<text><![CDATA[Nombre Y Firma del Secretario]]></text>
+			</staticText>
+			<line>
+				<reportElement x="102" y="469" width="367" height="2" forecolor="#000000"/>
+			</line>
+			<textField>
+				<reportElement x="28" y="143" width="504" height="66"/>
+				<textElement lineSpacing="Single">
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{argumento}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="16" y="44" width="256" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreAccionante}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="273" y="43" width="155" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionImpugnada}]]></textFieldExpression>
+			</textField>
+			<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
+				<reportElement x="429" y="44" width="117" height="19"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.util.Date"><![CDATA[$P{fecha}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="15" y="10" width="166" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{zona}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="251" y="10" width="290" height="20"/>
+				<textElement verticalAlignment="Bottom">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{ResolucionNumero}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="1" y="90" width="14" height="413" forecolor="#009232"/>
+				<textElement textAlignment="Center" rotation="Left">
+					<font size="8"/>
+				</textElement>
+				<text><![CDATA[Vigilado por la Superintendencia de la Economia Solidaria  NIT.:890.300.625-1]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="30" y="294" width="502" height="55"/>
+				<textElement textAlignment="Justified"/>
+				<textFieldExpression class="java.lang.String"><![CDATA["La presente Resolución será comunicada al interesado, a la dirección que tenga registrada en la Cooperativa, en su condición de asociado, de acuerdo con lo previsto en el Artículo 110 del Código Electoral."]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="30" y="230" width="502" height="55"/>
+				<textElement textAlignment="Justified"/>
+				<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto, se niega el recurso de reposición interpuesto contra la Resolución No."+$P{resolucion}+" , por las razones antes expuestas, y no procede conceder el recurso de apelación al no haber sido previamente interpuesto como subsidiario."]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="28" y="99" width="504" height="39"/>
+				<textElement textAlignment="Justified" verticalAlignment="Top"/>
+				<textFieldExpression class="java.lang.String"><![CDATA["Una vez revisados los hechos y argumentos planteados, la Comisión  Electoral determinó no procedente el argumento de:"]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="80">
+		<band height="68">
 			<rectangle>
-				<reportElement x="-20" y="0" width="594" height="59" forecolor="#009232" backcolor="#009232"/>
+				<reportElement x="-20" y="0" width="594" height="47" forecolor="#009232" backcolor="#009232"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="102" y="0" width="322" height="59" forecolor="#FFFFFF"/>
+				<reportElement x="1" y="7" width="554" height="33" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
+					<font size="15" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="17" y="61" width="72" height="18"/>
-				<textElement/>
+				<reportElement x="17" y="49" width="72" height="15" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[CO-FT-459]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="426" y="63" width="124" height="13"/>
-				<textElement/>
+				<reportElement x="422" y="47" width="124" height="15" forecolor="#009232"/>
+				<textElement textAlignment="Right">
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Mod.Septiembre 2021]]></text>
 			</staticText>
 		</band>
