--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-461.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-461.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO_FT_189" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.1000000000000039"/>
+	<property name="ireport.zoom" value="1.2100000000000053"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="637"/>
+	<property name="ireport.y" value="124"/>
 	<parameter name="acta" class="java.lang.String"/>
 	<parameter name="nombreApelante" class="java.lang.String"/>
 	<parameter name="resolucionApelada" class="java.lang.String"/>
@@ -48,209 +48,218 @@
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="577">
-			<frame>
-				<reportElement x="0" y="8" width="555" height="565" forecolor="#00B050"/>
-				<rectangle>
-					<reportElement x="22" y="8" width="533" height="31" forecolor="#000000"/>
-				</rectangle>
-				<rectangle>
-					<reportElement x="22" y="70" width="533" height="34" forecolor="#000000"/>
-				</rectangle>
-				<staticText>
-					<reportElement mode="Transparent" x="22" y="8" width="193" height="31" forecolor="#000000"/>
-					<textElement markup="none">
-						<font size="10" isBold="false"/>
-					</textElement>
-					<text><![CDATA[Tribunal de Elecciones y Escrutinios
-Acta No.]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="22" y="70" width="115" height="34"/>
-					<textElement/>
-					<text><![CDATA[Resolucion Apelada
-No.]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="195" y="71" width="121" height="33"/>
-					<textElement/>
-					<text><![CDATA[Decisión de la Comisión
-Resolución No.]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="439" y="71" width="50" height="20"/>
-					<textElement/>
-					<text><![CDATA[Fecha]]></text>
-				</staticText>
-				<line>
-					<reportElement x="191" y="70" width="1" height="34" forecolor="#000000"/>
-				</line>
-				<line>
-					<reportElement x="437" y="71" width="1" height="34" forecolor="#000000"/>
-				</line>
-				<rectangle>
-					<reportElement x="22" y="156" width="533" height="407" forecolor="#000000"/>
-				</rectangle>
-				<staticText>
-					<reportElement x="31" y="118" width="321" height="20"/>
-					<textElement textAlignment="Left" verticalAlignment="Middle">
-						<font size="11" isBold="true"/>
-					</textElement>
-					<text><![CDATA[Análisis de los hechos presentados]]></text>
-				</staticText>
-				<line>
-					<reportElement x="50" y="528" width="184" height="1" forecolor="#000000"/>
-				</line>
-				<staticText>
-					<reportElement x="345" y="529" width="167" height="18" forecolor="#000000"/>
-					<textElement textAlignment="Center">
-						<font size="12"/>
-					</textElement>
-					<text><![CDATA[Firma del secretario]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="66" y="528" width="150" height="18" forecolor="#000000"/>
-					<textElement textAlignment="Center">
-						<font size="12"/>
-					</textElement>
-					<text><![CDATA[Firma del Presidente]]></text>
-				</staticText>
-				<line>
-					<reportElement x="334" y="528" width="185" height="1" forecolor="#000000"/>
-				</line>
-				<textField>
-					<reportElement x="31" y="202" width="517" height="76"/>
-					<textElement lineSpacing="Single">
-						<font size="11"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{argumento}]]></textFieldExpression>
-				</textField>
-				<rectangle>
-					<reportElement x="22" y="39" width="533" height="31"/>
-				</rectangle>
-				<textField isBlankWhenNull="true">
-					<reportElement x="37" y="84" width="154" height="20"/>
-					<textElement textAlignment="Center" verticalAlignment="Top">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionApelada}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement mode="Transparent" x="78" y="20" width="118" height="19"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{acta}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="267" y="83" width="170" height="20"/>
-					<textElement textAlignment="Center">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionComision}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="31" y="156" width="517" height="46"/>
-					<textElement textAlignment="Left" verticalAlignment="Top">
-						<font isBold="false"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA["Ha recibido este Tribunal según consta en el Acta No."+$P{actaTribunal}+" el Recurso interpuesto y una vez "+
-"revisados  los hechos y argumentos planteados por el Apelante  se determinó  procedente el argumento de:"]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="31" y="278" width="517" height="27"/>
-					<textElement textAlignment="Left" verticalAlignment="Top">
-						<font isBold="false"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto se modifica la Resolución No."+$P{resolucionApelada}+" la cual queda así:"]]></textFieldExpression>
-				</textField>
-				<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
-					<reportElement x="438" y="84" width="117" height="19"/>
-					<textElement textAlignment="Center">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.util.Date"><![CDATA[$P{fecha}]]></textFieldExpression>
-				</textField>
-				<textField>
-					<reportElement x="31" y="305" width="517" height="77"/>
-					<textElement/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{decision}]]></textFieldExpression>
-				</textField>
-				<staticText>
-					<reportElement x="31" y="446" width="517" height="45"/>
-					<textElement lineSpacing="Single">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[La presente Resolución será comunicada al interesado, a la dirección que tenga registrada en la Cooperativa, en su condición de asociado, de acuerdo con lo previsto en el Artículo 110 del Código Electoral.]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="8" y="45" width="14" height="361"/>
-					<textElement rotation="Left">
-						<font size="8"/>
-					</textElement>
-					<text><![CDATA[Vigilado por la Superintendencia de la Economia Solidaria  NIT.:890.300.625-1]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="22" y="39" width="174" height="14"/>
-					<textElement textAlignment="Center">
-						<font isBold="false"/>
-					</textElement>
-					<text><![CDATA[ Apelante: Nombre(s) y Apellidos]]></text>
-				</staticText>
-				<textField isBlankWhenNull="true">
-					<reportElement x="31" y="51" width="516" height="17"/>
-					<textElement textAlignment="Center" verticalAlignment="Bottom">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreApelante}]]></textFieldExpression>
-				</textField>
-				<line>
-					<reportElement x="215" y="8" width="1" height="31"/>
-				</line>
-				<staticText>
-					<reportElement x="216" y="8" width="81" height="31"/>
-					<textElement/>
-					<text><![CDATA[Resolución N°]]></text>
-				</staticText>
-				<textField>
-					<reportElement x="277" y="19" width="189" height="20"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionNumero}]]></textFieldExpression>
-				</textField>
-				<staticText>
-					<reportElement x="30" y="425" width="517" height="21"/>
-					<textElement>
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Se le hace saber que contra la presente Resolución NO procede ningún recurso.]]></text>
-				</staticText>
-				<textField>
-					<reportElement x="31" y="382" width="516" height="60"/>
-					<textElement/>
-					<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto, se niega el recurso de reposición interpuesto contra la Resolución No.______, por las razones antes expuestas y se concede el recurso de apelación oportunamente interpuesto, procediendo a remitir la presente actuación al Tribunal de Elecciones y Escrutinios."]]></textFieldExpression>
-				</textField>
-			</frame>
+		<band height="545">
+			<rectangle>
+				<reportElement x="22" y="8" width="533" height="31" forecolor="#000000"/>
+			</rectangle>
+			<rectangle>
+				<reportElement x="22" y="70" width="533" height="34" forecolor="#000000"/>
+			</rectangle>
+			<staticText>
+				<reportElement mode="Transparent" x="23" y="8" width="223" height="15" forecolor="#009232"/>
+				<textElement markup="none">
+					<font size="10" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Tribunal de Elecciones y Escrutinios Acta No.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="22" y="70" width="159" height="15" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Resolucion Apelada No.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="195" y="71" width="186" height="15" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Decisión de la Comisión Resolución No.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="439" y="70" width="50" height="15" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Fecha]]></text>
+			</staticText>
+			<line>
+				<reportElement x="191" y="70" width="1" height="34" forecolor="#000000"/>
+			</line>
+			<line>
+				<reportElement x="437" y="71" width="1" height="34" forecolor="#000000"/>
+			</line>
+			<rectangle>
+				<reportElement x="22" y="126" width="533" height="404" forecolor="#000000"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="31" y="106" width="321" height="20"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Análisis de los hechos presentados]]></text>
+			</staticText>
+			<line>
+				<reportElement x="31" y="511" width="237" height="1" forecolor="#000000"/>
+			</line>
+			<staticText>
+				<reportElement x="307" y="512" width="240" height="18" forecolor="#000000"/>
+				<textElement textAlignment="Center">
+					<font size="8"/>
+				</textElement>
+				<text><![CDATA[Firma del secretario]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="31" y="512" width="237" height="18" forecolor="#000000"/>
+				<textElement textAlignment="Center">
+					<font size="8"/>
+				</textElement>
+				<text><![CDATA[Firma del Presidente]]></text>
+			</staticText>
+			<line>
+				<reportElement x="307" y="511" width="240" height="1" forecolor="#000000"/>
+			</line>
+			<textField isBlankWhenNull="true">
+				<reportElement x="31" y="184" width="517" height="65"/>
+				<textElement lineSpacing="Single">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{argumento}]]></textFieldExpression>
+			</textField>
+			<rectangle>
+				<reportElement x="22" y="39" width="533" height="31"/>
+			</rectangle>
+			<textField isBlankWhenNull="true">
+				<reportElement x="25" y="83" width="166" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionApelada}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement mode="Transparent" x="30" y="19" width="216" height="19"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{acta}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="195" y="83" width="242" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionComision}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="31" y="134" width="517" height="42"/>
+				<textElement textAlignment="Justified" verticalAlignment="Top">
+					<font size="10" isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["Ha recibido este Tribunal según consta en el Acta No. "+$P{actaTribunal}+" el Recurso interpuesto y una vez revisados  los hechos y argumentos planteados por el Apelante  se determinó  procedente el argumento de:"]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="31" y="255" width="517" height="20"/>
+				<textElement textAlignment="Justified" verticalAlignment="Top">
+					<font size="10" isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto se modifica la Resolución No."+$P{resolucionApelada}+" la cual queda así:"]]></textFieldExpression>
+			</textField>
+			<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
+				<reportElement x="438" y="83" width="117" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.util.Date"><![CDATA[$P{fecha}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="31" y="281" width="517" height="64"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{decision}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="30" y="431" width="517" height="33"/>
+				<textElement textAlignment="Justified" lineSpacing="Single">
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[La presente Resolución será comunicada al interesado, a la dirección que tenga registrada en la Cooperativa, en su condición de asociado, de acuerdo con lo previsto en el Artículo 110 del Código Electoral.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="8" y="126" width="14" height="404" forecolor="#009232"/>
+				<textElement textAlignment="Center" rotation="Left">
+					<font size="8"/>
+				</textElement>
+				<text><![CDATA[Vigilado por la Superintendencia de la Economia Solidaria  NIT.:890.300.625-1]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="25" y="39" width="232" height="15" forecolor="#009232"/>
+				<textElement>
+					<font size="10" isBold="false"/>
+				</textElement>
+				<text><![CDATA[ Apelante: Nombre(s) y Apellidos]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="31" y="49" width="516" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreApelante}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="249" y="8" width="1" height="31"/>
+			</line>
+			<staticText>
+				<reportElement x="254" y="8" width="81" height="15" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Resolución N°]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="334" y="18" width="221" height="20"/>
+				<textElement verticalAlignment="Bottom">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionNumero}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="31" y="404" width="517" height="20"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Se le hace saber que contra la presente Resolución NO procede ningún recurso.]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="31" y="352" width="516" height="45"/>
+				<textElement textAlignment="Justified">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto, se niega el recurso de reposición interpuesto contra la Resolución No. " +$P{resolucionNumero}+ ", por las razones antes expuestas y se concede el recurso de apelación oportunamente interpuesto, procediendo a remitir la presente actuación al Tribunal de Elecciones y Escrutinios."]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="91">
+		<band height="69">
 			<staticText>
-				<reportElement x="22" y="70" width="100" height="18"/>
-				<textElement/>
+				<reportElement x="22" y="38" width="100" height="18" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[CO-FT-461]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="455" y="70" width="100" height="18"/>
-				<textElement textAlignment="Right"/>
+				<reportElement x="398" y="38" width="157" height="18" forecolor="#009232"/>
+				<textElement textAlignment="Right">
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Mod.Septiembre 2021]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="-19" y="3" width="595" height="67" forecolor="#009232" backcolor="#009232"/>
+				<reportElement x="-19" y="3" width="595" height="33" forecolor="#009232" backcolor="#009232"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="97" y="8" width="322" height="59" forecolor="#FFFFFF"/>
+				<reportElement x="97" y="5" width="322" height="28" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
