--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_173.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_173.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO-FT-172" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.7715610000000022"/>
+	<property name="ireport.zoom" value="1.4641000000000022"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="151"/>
+	<property name="ireport.y" value="83"/>
 	<parameter name="zona" class="java.lang.String"/>
 	<parameter name="nombre" class="java.lang.String"/>
 	<parameter name="resolucion" class="java.lang.String"/>
@@ -56,14 +56,14 @@
 				<reportElement x="304" y="1" width="1" height="31" forecolor="#000000"/>
 			</line>
 			<staticText>
-				<reportElement x="59" y="5" width="71" height="14" forecolor="#00834C"/>
+				<reportElement x="55" y="5" width="71" height="14" forecolor="#00834C"/>
 				<textElement markup="none">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Zonal Electoral No.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="323" y="5" width="29" height="14" forecolor="#00834C"/>
+				<reportElement x="309" y="5" width="29" height="14" forecolor="#00834C"/>
 				<textElement markup="none">
 					<font size="8"/>
 				</textElement>
@@ -86,21 +86,21 @@
 			<line>
 				<reportElement x="366" y="12" width="1" height="20"/>
 			</line>
-			<textField>
-				<reportElement x="372" y="11" width="44" height="20"/>
-				<textElement textAlignment="Right" verticalAlignment="Bottom">
+			<textField isBlankWhenNull="true">
+				<reportElement x="367" y="11" width="49" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{anio}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="420" y="11" width="47" height="20"/>
-				<textElement textAlignment="Justified" verticalAlignment="Bottom"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{mes}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="472" y="11" width="39" height="20"/>
-				<textElement verticalAlignment="Bottom"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{dia}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -111,9 +111,9 @@
 				<reportElement x="50" y="4" width="470" height="387" forecolor="#000000"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="38" y="4" width="11" height="387" forecolor="#009232"/>
+				<reportElement x="37" y="4" width="11" height="387" forecolor="#009232"/>
 				<textElement textAlignment="Center" rotation="Left">
-					<font size="7"/>
+					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Vigilada por la Superintendencia de la Economia Solidaria NIT.: 890.300.625-1]]></text>
 			</staticText>
@@ -121,16 +121,16 @@
 				<reportElement x="50" y="0" width="470" height="4" forecolor="#000000" backcolor="#000000"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="119" y="366" width="90" height="11" forecolor="#000000"/>
+				<reportElement x="71" y="366" width="183" height="11" forecolor="#000000"/>
 				<textElement textAlignment="Center">
-					<font size="7"/>
+					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Firma del Presidente]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="365" y="366" width="90" height="11" forecolor="#000000"/>
+				<reportElement x="314" y="366" width="184" height="11" forecolor="#000000"/>
 				<textElement textAlignment="Center">
-					<font size="7"/>
+					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Firma del Secretario]]></text>
 			</staticText>
@@ -140,13 +140,6 @@
 			<line>
 				<reportElement x="314" y="365" width="184" height="1" forecolor="#000000"/>
 			</line>
-			<staticText>
-				<reportElement x="69" y="197" width="430" height="82" forecolor="#000000"/>
-				<textElement textAlignment="Justified" lineSpacing="1_1_2">
-					<font size="10"/>
-				</textElement>
-				<text><![CDATA[Contra la presente Resolución proceden los recursos de Reposición ante la Comisión Electoral y Apelación ante el Tribunal de Elecciones y Escrutinios, establecidos en el Código Electoral Resolución No. 390 del 27 de mayo de 2016 y en el Reglamento de Elecciones Resolución No. 391 del 27 de mayo de 2016.]]></text>
-			</staticText>
 			<textField isBlankWhenNull="true">
 				<reportElement x="70" y="115" width="428" height="73"/>
 				<textElement lineSpacing="1_1_2">
@@ -155,7 +148,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{razones}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="69" y="288" width="429" height="28"/>
+				<reportElement x="71" y="273" width="427" height="34"/>
 				<textElement>
 					<font size="10"/>
 				</textElement>
@@ -163,17 +156,24 @@
 			</textField>
 			<textField>
 				<reportElement x="71" y="16" width="427" height="20"/>
-				<textElement>
+				<textElement textAlignment="Justified">
 					<font size="10"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA["Asociado(a) " + $P{nombre} + " (Cabeza de Plancha)"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Asociado(a) " + $P{nombre}.toUpperCase() + " (Cabeza de Plancha)"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="71" y="43" width="427" height="70"/>
 				<textElement textAlignment="Justified">
 					<font size="10"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA["La Comisión Electoral de la Zona Electoral No. " + $P{zona} + " expide Resolución No. " + $P{resolucion} + " de Rechazo de la Plancha inscrita por el Asociado(a) " + $P{nombre}.toUpperCase()+ "identificado con cédula de ciudadanía Número " + $P{cedula} + " según consta en el Acta No. " +$P{acta} + " del mes de " + $P{mesActa} + ", por las siguientes razones:"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["La Comisión Electoral de la Zona Electoral No. " + $P{zona} + " expide Resolución No. " + $P{resolucion} + " de Rechazo de la Plancha inscrita por el Asociado(a) " + $P{nombre}.toUpperCase()+ " identificado con cédula de ciudadanía Número " + $P{cedula} + " según consta en el Acta No. " +$P{acta} + " del mes de " + $P{mesActa} + ", por las siguientes razones:"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="71" y="201" width="427" height="60"/>
+				<textElement textAlignment="Justified">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["Contra la presente Resolución proceden los recursos de Reposición ante la Comisión Electoral y Apelación ante el Tribunal de Elecciones y Escrutinios, establecidos en el Código Electoral Resolución No. 390 del 27 de mayo de 2016 y en el Reglamento de Elecciones Resolución No. 391 del 27 de mayo de 2016."]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -181,12 +181,16 @@
 		<band height="58">
 			<staticText>
 				<reportElement x="50" y="38" width="100" height="20" forecolor="#009232"/>
-				<textElement/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[CO-FT-173]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="411" y="38" width="109" height="20" forecolor="#009232"/>
-				<textElement textAlignment="Right"/>
+				<textElement textAlignment="Right">
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Mod.Septiembre 2021]]></text>
 			</staticText>
 			<rectangle>
@@ -195,7 +199,7 @@
 			<staticText>
 				<reportElement x="0" y="7" width="555" height="25" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="14" isBold="true"/>
+					<font size="15" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
 			</staticText>
