--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_174.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_174.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO_FT_174" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.771561000000017"/>
+	<property name="ireport.zoom" value="1.4641000000000144"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="152"/>
 	<parameter name="zona" class="java.lang.String"/>
 	<parameter name="plancha" class="java.lang.String"/>
 	<parameter name="nombre" class="java.lang.String"/>
@@ -57,7 +57,7 @@
 				<reportElement x="0" y="0" width="425" height="46" forecolor="#00834C"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="6" y="4" width="136" height="16"/>
+				<reportElement x="6" y="4" width="136" height="16" forecolor="#009232"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -67,13 +67,13 @@
 				<reportElement x="218" y="0" width="1" height="46" forecolor="#00834C"/>
 			</line>
 			<staticText>
-				<reportElement x="221" y="4" width="86" height="16"/>
+				<reportElement x="221" y="4" width="86" height="16" forecolor="#009232"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[PLANCHA No.]]></text>
 			</staticText>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="7" y="23" width="201" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{zona}]]></textFieldExpression>
@@ -93,7 +93,7 @@
 				<reportElement x="0" y="46" width="425" height="51" forecolor="#00834C"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="7" y="51" width="135" height="14" forecolor="#006400"/>
+				<reportElement x="7" y="51" width="135" height="14" forecolor="#009232"/>
 				<textElement>
 					<font size="10" isBold="false" isStrikeThrough="false"/>
 				</textElement>
@@ -108,27 +108,29 @@
 				<reportElement x="0" y="97" width="425" height="36" forecolor="#00834C"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="6" y="100" width="136" height="14" forecolor="#006400"/>
-				<textElement/>
+				<reportElement x="6" y="99" width="136" height="14" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Cédula de Ciudadanía]]></text>
 			</staticText>
 			<line>
 				<reportElement x="177" y="97" width="1" height="36" forecolor="#00834C"/>
 			</line>
 			<staticText>
-				<reportElement x="183" y="100" width="223" height="14" forecolor="#006400"/>
+				<reportElement x="183" y="99" width="223" height="14" forecolor="#009232"/>
 				<textElement>
 					<font size="10"/>
 				</textElement>
 				<text><![CDATA[Antigüedad en Coomeva como Asociado]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="6" y="116" width="161" height="15"/>
+				<reportElement x="6" y="114" width="167" height="17"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{cedula}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="183" y="116" width="215" height="15"/>
+				<reportElement x="183" y="114" width="215" height="17"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{fecha_antiguedad}]]></textFieldExpression>
 			</textField>
@@ -149,16 +151,20 @@
 				<reportElement x="0" y="-1" width="555" height="38" forecolor="#00834C"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="9" y="2" width="131" height="14" forecolor="#006400"/>
-				<textElement/>
+				<reportElement x="9" y="2" width="131" height="14" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Profesión - Oficio]]></text>
 			</staticText>
 			<line>
 				<reportElement x="274" y="-1" width="1" height="38" forecolor="#00834C"/>
 			</line>
 			<staticText>
-				<reportElement x="282" y="2" width="151" height="14" forecolor="#006400"/>
-				<textElement/>
+				<reportElement x="282" y="2" width="151" height="14" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Año de Expedición del Título]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
@@ -166,7 +172,7 @@
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{profesion}]]></textFieldExpression>
 			</textField>
-			<textField pattern="dd-MMM-yyyy">
+			<textField pattern="dd-MMM-yyyy" isBlankWhenNull="true">
 				<reportElement x="283" y="18" width="261" height="16"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{fecha_titulo}]]></textFieldExpression>
@@ -175,12 +181,14 @@
 				<reportElement x="0" y="37" width="555" height="66" forecolor="#00834C"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="8" y="42" width="136" height="13" forecolor="#006400"/>
-				<textElement/>
-				<text><![CDATA[Otros Estudios:]]></text>
+				<reportElement x="8" y="42" width="136" height="13" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<text><![CDATA[Otros Estudios]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement x="8" y="58" width="538" height="38"/>
+				<reportElement x="8" y="58" width="538" height="45"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{estudios}]]></textFieldExpression>
 			</textField>
@@ -188,22 +196,22 @@
 				<reportElement x="0" y="103" width="555" height="22" forecolor="#009232" backcolor="#009232"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="142" y="107" width="287" height="14" forecolor="#FFFFFF"/>
+				<reportElement x="2" y="105" width="551" height="18" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center">
-					<font size="11"/>
+					<font size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cargo y/o actividad que actualmente desempeña]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="0" y="125" width="555" height="45" forecolor="#00834C"/>
 			</rectangle>
-			<textField>
-				<reportElement x="8" y="145" width="171" height="20"/>
+			<textField isBlankWhenNull="true">
+				<reportElement x="2" y="145" width="180" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{empresa}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="187" y="144" width="227" height="20"/>
+			<textField isBlankWhenNull="true">
+				<reportElement x="185" y="145" width="238" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{cargo}]]></textFieldExpression>
 			</textField>
@@ -217,22 +225,28 @@
 				<reportElement x="0" y="140" width="555" height="1" forecolor="#00834C"/>
 			</line>
 			<staticText>
-				<reportElement x="25" y="126" width="142" height="13" forecolor="#006400"/>
-				<textElement textAlignment="Center"/>
+				<reportElement x="2" y="126" width="177" height="13" forecolor="#009232"/>
+				<textElement textAlignment="Center">
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Empresa y/o Actividad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="240" y="125" width="118" height="13" forecolor="#006400"/>
-				<textElement textAlignment="Center"/>
+				<reportElement x="187" y="126" width="238" height="13" forecolor="#009232"/>
+				<textElement textAlignment="Center">
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Cargo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="449" y="126" width="77" height="13" forecolor="#006400"/>
-				<textElement textAlignment="Center"/>
+				<reportElement x="429" y="126" width="124" height="13" forecolor="#009232"/>
+				<textElement textAlignment="Center">
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Antigüedad]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="433" y="144" width="112" height="20"/>
+			<textField isBlankWhenNull="true">
+				<reportElement x="429" y="145" width="124" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{antiguedad}]]></textFieldExpression>
 			</textField>
@@ -240,21 +254,27 @@
 				<reportElement x="0" y="170" width="555" height="149" forecolor="#00834C"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="56" y="295" width="165" height="13"/>
-				<textElement/>
+				<reportElement x="25" y="289" width="230" height="15"/>
+				<textElement textAlignment="Center">
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Firma del Cabeza de Plancha]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="333" y="295" width="154" height="13"/>
-				<textElement/>
+				<reportElement x="296" y="289" width="229" height="15"/>
+				<textElement textAlignment="Center">
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Firma de quién entrega]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="25" y="185" width="282" height="14" forecolor="#006400"/>
-				<textElement/>
+				<reportElement x="25" y="185" width="282" height="14" forecolor="#009232"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Último cargo dirigencial desempeñado en la Cooperativa]]></text>
 			</staticText>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="25" y="213" width="500" height="18"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{ultimo_cargo}]]></textFieldExpression>
@@ -276,20 +296,24 @@
 				<reportElement x="-19" y="1" width="594" height="34" forecolor="#009232" backcolor="#009232"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="155" y="10" width="278" height="25" forecolor="#FFFFFF"/>
-				<textElement textAlignment="Center">
-					<font size="13" isBold="true"/>
+				<reportElement x="0" y="6" width="553" height="25" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="15" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="425" y="37" width="128" height="15"/>
-				<textElement textAlignment="Right"/>
+				<reportElement x="425" y="35" width="128" height="19" forecolor="#009232"/>
+				<textElement textAlignment="Right">
+					<font size="10"/>
+				</textElement>
 				<text><![CDATA[Mod. Septiembre 2021]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="2" y="35" width="116" height="17"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement x="2" y="35" width="116" height="17" forecolor="#009232"/>
+				<textElement verticalAlignment="Middle">
+					<font size="10"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreReporte}]]></textFieldExpression>
 			</textField>
 		</band>
